<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/martinique"
    tools:context=".BoardActivity">

    <RelativeLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        >

        <RelativeLayout
            android:id="@+id/player1_layout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_square_green_border">

            <TextView
                android:id="@+id/player1_name"
                style="@style/players_names"
                android:text="@string/first_player"
                android:textColor="@color/sidecar" />

            <ImageView
                android:id="@+id/player1_cross"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/cross_image_description"
                app:srcCompat="@drawable/cross" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/player2_layout"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/rounded_square_white_border">

            <TextView
                android:id="@+id/player2_name"
                style="@style/players_names"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:text="@string/second_player"
                android:textColor="@color/biloba_flower"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/player2_circle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="40dp"
                android:contentDescription="@string/circle_image_description"
                app:srcCompat="@drawable/circle" />
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/board"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_square"
        android:backgroundTint="@color/viking"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/top_left_square"

            style="@style/box_style">

            <ImageView
                android:id="@+id/top_left_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/top_left_image_description" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/top_center_square"

            style="@style/box_style"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/top_center_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/top_center_image_description" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/top_right_square"

            style="@style/box_style"
            android:layout_alignParentEnd="true">

            <ImageView
                android:id="@+id/top_right_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/top_right_image_description" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/center_left_square"

            style="@style/box_style"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/center_left_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/center_left_image_description" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/center_right_square"

            style="@style/box_style"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <ImageView
                android:id="@+id/center_right_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/center_right_image_description" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/bottom_left_square"

            style="@style/box_style"
            android:layout_alignParentBottom="true">

            <ImageView
                android:id="@+id/bottom_left_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/bottom_left_image_description" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_center_square"

            style="@style/box_style"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true">

            <ImageView
                android:id="@+id/bottom_center_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/bottom_center_image_description" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_right_square"

            style="@style/box_style"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">


            <ImageView
                android:id="@+id/bottom_right_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/bottom_right_image_description" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/center_square"
            style="@style/boxes">

            <ImageView
                android:id="@+id/center_square_image"
                style="@style/cross_circle_images"
                android:contentDescription="@string/center_image_description" />
        </RelativeLayout>

    </RelativeLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="60dp"
        android:text="Surrender"
        android:textStyle="bold"
        android:textSize="16dp"
        android:padding="10dp"
        android:background="@drawable/oval_purple_button"
        android:textColor="@color/martinique"
        >

    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>
